--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,15 @@
-#noti-bar {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 20px;
-  background-color: lightgray;
-  z-index: 3;
-}
+// #noti-bar {
+//   position: fixed;
+//   top: 0;
+//   width: 100%;
+//   height: 20px;
+//   background-color: lightgray;
+//   z-index: 3;
+// }
 
 #top-nav {
   position: fixed;
-  top: 20px;
+  top: 0;
   display: flex;
   width: 100%;
   height: 60px;
@@ -19,8 +19,8 @@
   z-index: 3;
   background-color: white;
 
-  #back-icon {
-    width: 40px;
+  img#logo {
+    height: 40px;
   }
 
   h1 {
@@ -31,8 +31,13 @@
     color: #414141;
   }
 
-  img#logo {
-    height: 40px;
+  #user-icon {
+    width: 40px;
+    color: gray;
+
+    mat-icon {
+      font-size: 40px;
+    }
   }
 }
 
