meal grid squares, minor tweaks

--- a/src/app/meal-grid/meal-grid.component.html
+++ b/src/app/meal-grid/meal-grid.component.html
@@ -1,1 +1,8 @@
-<p>meal-grid works!</p>
+<div id="week-container">
+
+</div>
+<div id="meal-grid-container">
+  <div *ngFor="let card of mealCards" class="meal-card">
+    <a><mat-icon>add_circle_outline</mat-icon></a>
+  </div>
+</div>
