--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,3 @@
-// #noti-bar {
-//   position: fixed;
-//   top: 0;
-//   width: 100%;
-//   height: 20px;
-//   background-color: lightgray;
-//   z-index: 3;
-// }
-
 #top-nav {
   position: fixed;
   top: 0;
@@ -41,17 +32,24 @@
   }
 }
 
+#content {
+  height: 100%;
+}
+
 #bottom-nav {
   display: flex;
   position: fixed;
   bottom: 0;
-  height: 70px;
+  height: 10%;
+  max-height: 60px;
   width: 100%;
   box-shadow: 0 -2px 10px lightgray;
 }
 
 mat-icon {
-  font-size: 32px;
+  width: auto;
+  height: auto;
+  font-size: 28px;
   pointer-events: none;
 }
 
@@ -59,13 +57,13 @@ mat-icon {
   flex-grow: 1;
   border: none;
   background-color: white;
-  color: #6e6e6e;
+  color: #34d66a;
 }
 
 .bottom-btn-active {
   flex-grow: 1;
   border: none;
   background-color: white;
-  color: #34d66a;
-  border-bottom: solid 5px #34d66a;
+  color: #ff5b74;
+  border-bottom: solid 5px #ff5b74;
 }
