--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,12 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+html {
+  height: 100%;
+  margin: 0;
 }
 
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
